<resources>
    <string name="app_name">ETL Client</string>
    <string name="title_executions">Executions</string>
    <string name="title_pipelines">Pipelines</string>
    <string name="title_settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="server_instances">Server instances</string>
    <string name="server_instance">Server instance</string>
    <string name="loading">loading…</string>
    <string name="server_name">Server name</string>
    <string name="active">Active</string>
    <string name="server_address">Server address</string>
    <string name="notes">Notes</string>
    <string name="ping">Ping</string>
    <string name="done">Save</string>
    <string name="save_status_name">Server instance with the same name already exists!</string>
    <string name="save_status_url">Server instance with the same url already exists!</string>
    <string name="save_status_empty_name">Name can\'t be empty!</string>
    <string name="save_status_empty_url">Url can\'t be empty!</string>
    <string name="no_server_instances">There are no server instances.</string>
    <string name="no_pipelines">There are no pipelines.</string>
    <string name="has_been_deleted">has been deleted</string>
    <string name="undo">UNDO</string>
    <string name="pipeline_not_found">Pipeline not found!</string>
    <string name="server_not_found">Server not found!</string>
    <string name="can_not_connect_to_server">Can\'t connect to the server!</string>
    <string name="internal_error">Internal error.</string>
    <string name="server_side_error">Server side error!</string>
    <string name="successfully_launched">Successfully launched.</string>
    <string name="problem_with_protocol">Problem with protocol!</string>
    <string name="no_executions">There are no executions.</string>
    <string name="night_mode_no">Off</string>
    <string name="night_mode_yes">On</string>
    <string name="night_mode_system">System default</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="no_camera_permission">App does not have the permission to use camera</string>
    <string name="ok">OK</string>
    <string name="low_storage_error">Not enough storage!</string>
    <string name="server_not_parsed">Server instance could not be parsed!</string>
    <string name="ping_of">Ping of</string>
    <string name="successful">Successful</string>
    <string name="connection_timeout">Connection timeout</string>
    <string name="unknown_host">Unknown host</string>
    <string name="security_exception">Security exception</string>
    <string name="network_error">Network error</string>
    <string name="successful_api_call">Successful api call</string>
    <string name="night_mode">Night Mode</string>
    <string name="frontend_port_if_not_protocol_default">Frontend port (if not protocol default)</string>
    <string name="use_basic_authentication">Use basic authentication</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="notification_channel_name">Default Channel</string>
    <string name="execution_notification_finished">Execution finished</string>
    <string name="execution_notification_failed">Execution failed</string>
    <string name="execution_notification_running">Execution running</string>
    <string name="execution_notification_cancelled">Execution canceled</string>
    <string name="execution_notification_dangling">Execution dangling</string>
    <string name="execution_notification_cancelling">Execution cancelling</string>
    <string name="execution_notification_queued">Execution queued</string>
    <string name="execution_notification_null_status">Execution completed</string>
    <string name="choose_a_server_instance">Choose a server instance</string>
    <string name="cancel">Cancel</string>
    <string name="continue_string">Continue</string>
    <string name="no_server_selected">No server selected!</string>
    <string name="server_instance_no_longer_registered">The server instance is no longer registered here!</string>
    <string name="error_while_downloading_pipeline">Error while downloading the pipeline!</string>
    <string name="pipeline_could_not_be_parsed">Pipeline could not be parsed!</string>
    <string name="error_while_loading_pipeline">Error while loading pipeline!</string>
    <string name="try_again">Try again</string>
    <string name="tab_text_0">Config</string>
    <string name="tab_text_1">General</string>
    <string name="tab_text_2">Inheritance</string>
    <string name="tab_text_3">I/O</string>
    <string name="error_while_downloading_component_configuration">Error while downloading component configuration!</string>
    <string name="error_while_parsing_configuration">Error while parsing configuration!</string>
    <string name="label">Label</string>
    <string name="description">Description</string>
    <string name="no_configuration">There is no configuration.</string>
    <string name="input">INPUT</string>
    <string name="output">OUTPUT</string>
    <string name="there_are_no_bindings">There are no bindings.</string>
    <string name="there_are_no_inputs">There are no inputs.</string>
    <string name="there_are_no_outputs">There are no outputs.</string>
    <string name="error_while_parsing_bindings">Error while parsing bindings!</string>
    <string name="error_while_downloading_component_bindings">Error while downloading component bindings!</string>
    <string name="connection_with">Connection with</string>
    <string name="create_connection">Create connection</string>
    <string name="component">Component</string>
    <string name="binding">Binding</string>
    <string name="select_both_component_and_binding">You have to select both component and binding!</string>
    <string name="choose_a_new_component">Choose a new component</string>
    <string name="no_component_is_selected">No component is selected!</string>
    <string name="error_while_downloading_default_configuration">Error while downloading default configuration!</string>
    <string name="error_while_parsing_default_configuration">Error while parsing default configuration!</string>
    <string name="delete_this_component">Delete this component</string>
    <string name="error_while_downloading_response">Error while downloading response!</string>
    <string name="error_while_parsing_response">Error while parsing response!</string>
    <string name="error_while_uploading_pipeline">Error while uploading pipeline!</string>
    <string name="pipeline_has_been_saved">Pipeline has been saved.</string>
    <string name="pipeline_label">Pipeline Label</string>
    <string name="error_while_getting_executions_from">Error while getting executions from</string>
    <string name="error_while_getting_pipelines_from">Error while getting pipelines from</string>
    <string name="licenses">licenses</string>
    <string name="create_pipeline">Create pipeline</string>
    <string name="create">Create</string>
    <string name="no_servers_registered">There are no servers registered in the app. Register them in settings.</string>
    <string name="all_instances">All instances</string>
    <string name="error_downloading_component_info">Error while downloading component information.</string>
    <string name="error_parsing_component_info">Error while parsing component information.</string>
    <string name="started">Started</string>
    <string name="finished">Finished</string>
    <string name="duration">Duration</string>
    <string name="size">Size</string>
    <string name="components_total">Components total</string>
    <string name="components_finished">Components finished</string>
    <string name="components_to_map">Components to map</string>
    <string name="components_mapped">Components mapped</string>
    <string name="currently_executed">Currently executed</string>
    <string name="components">Components</string>
    <string name="execution_notification_mapped">Execution mapped</string>
    <string name="notification_channel_name_foreground">Foreground Monitor Channel</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="monitor_with_frequency_around">Monitoring with frequency around</string>
    <string name="execution_monitor">Execution Monitor</string>
    <string name="frequency">Frequency</string>
    <string name="frequency_lower_case">frequency</string>
    <string name="time_unit">Time unit</string>
    <string name="stop_reminding">Stop reminding</string>
    <string name="background_execution_monitoring">Background execution monitoring</string>
    <string name="monitoring_frequency_more">When an execution monitoring frequency is set to 15 minutes or more, the monitoring will run in background even if the application is not running, or the phone has been restarted.</string>
    <string name="monitoring_frequency_less">When an execution monitoring frequency is set to be less than 15 minutes, the monitoring will run until the application is removed from recent, or the monitoring is canceled by the user. While this type of monitoring is active, a persistent notification is displayed.</string>
    <string name="no_effect_on_automatic_refresh_rate">This setting has no effect on an automatic refresh rate at which the application refreshes executions while the application is running. The automatic refresh rate is still %s.</string>
    <string name="recently_completed_executions">Recently completed executions</string>
    <string name="do_not_kill_info">If your phone manufacturer happens to be listed on <a href="https://dontkillmyapp.com/">this website</a>, it will probably try to mess with the execution monitoring. For the best functionality, open the application settings, allow the autostart option and disable the battery saver for this application.</string>
    <string name="android_manufacturers_killing_apps">Android manufacturers killing apps</string>
    <string name="open_settings">Open settings</string>
    <string name="register_server">Register server</string>
    <string name="server_url_is_not_valid">Server URL is not valid!</string>
    <string name="open_in_browser">Open in browser</string>
</resources>