<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_settings">

    <fragment
        android:id="@+id/navigation_executions"
        android:name="cz.palda97.lpclient.view.executions.ExecutionsFragment"
        android:label="@string/title_executions"
        tools:layout="@layout/fragment_executions" />

    <fragment
        android:id="@+id/navigation_pipelines"
        android:name="cz.palda97.lpclient.view.pipelines.PipelinesFragment"
        android:label="@string/title_pipelines"
        tools:layout="@layout/fragment_pipelines" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="cz.palda97.lpclient.view.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>