<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View" />

        <variable
            name="execution"
            type="cz.palda97.lpclient.viewmodel.executiondetails.ExecutionDetailV" />

        <variable
            name="loading"
            type="Boolean" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="22dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/circle"
                android:gravity="center"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/imageView"
                    app:imageResource="@{execution.status}"
                    android:layout_width="24dp"
                    android:layout_height="24dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="24dp"
                android:visibility="@{execution.start == null ? View.GONE : View.VISIBLE}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:text="@string/started" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:textAlignment="textEnd"
                    android:text="@{execution.start}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:visibility="@{execution.end == null ? View.GONE : View.VISIBLE}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:text="@string/finished" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:textAlignment="textEnd"
                    android:text="@{execution.end}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:visibility="@{execution.duration == null ? View.GONE : View.VISIBLE}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:text="@string/duration" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:textAlignment="textEnd"
                    android:text="@{execution.duration}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:visibility="@{execution.size == null ? View.GONE : View.VISIBLE}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:text="@string/size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:textAlignment="textEnd"
                    android:text="@{execution.size}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:visibility="@{execution.componentToExecute == null ? View.GONE : View.VISIBLE}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:text="@string/components_total" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:textAlignment="textEnd"
                    android:text="@{execution.componentToExecute}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:visibility="@{execution.componentFinished == null ? View.GONE : View.VISIBLE}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:text="@string/components_finished" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:textAlignment="textEnd"
                    android:text="@{execution.componentFinished}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:visibility="@{execution.componentToMap == null ? View.GONE : View.VISIBLE}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:text="@string/components_to_map" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:textAlignment="textEnd"
                    android:text="@{execution.componentToMap}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:visibility="@{execution.componentMapped == null ? View.GONE : View.VISIBLE}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:text="@string/components_mapped" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:textAlignment="textEnd"
                    android:text="@{execution.componentMapped}" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="8dp"
                android:visibility="@{execution.componentExecuted == null ? View.GONE : View.VISIBLE}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:text="@string/currently_executed" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/ta_regular16_primary"
                    android:textAlignment="textEnd"
                    android:text="@{execution.componentExecuted}" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="22dp"
                android:background="?android:attr/listDivider" />
            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/components" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="@{loading == false ? View.VISIBLE : View.GONE}">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/insert_components_here"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="@{loading ? View.VISIBLE : View.GONE}">
                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loading" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>